[gd_scene load_steps=3 format=2]

[ext_resource path="res://Images/NicePng_telephone-png_103983.png" type="Texture" id=1]
[ext_resource path="res://Game/WordGuess/WordGuess.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.51984
margin_right = 2.51978
color = Color( 0.972549, 0.933333, 0.933333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Control" parent="."]
margin_left = 405.0
margin_top = -1.0
margin_right = 616.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Logo"]
margin_left = 36.1292
margin_top = 166.405
margin_right = 135.129
margin_bottom = 180.405
rect_scale = Vector2( 1.4, 1.16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "WORD    GUESS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phone" type="TextureRect" parent="Logo"]
margin_left = 11.0831
margin_top = 7.90456
margin_right = 1167.08
margin_bottom = 942.905
rect_min_size = Vector2( 200, 200 )
rect_scale = Vector2( 0.159999, 0.16 )
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Describing" type="Control" parent="."]
visible = false
margin_left = 262.0
margin_top = 199.0
margin_right = 766.0
margin_bottom = 536.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowText" type="TextEdit" parent="Describing"]
margin_left = 32.0
margin_top = -14.0
margin_right = 462.0
margin_bottom = 268.0
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InsertText" type="TextEdit" parent="Describing"]
margin_left = 106.0
margin_top = 286.0
margin_right = 304.0
margin_bottom = 336.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="SendButton" type="Button" parent="Describing"]
margin_left = 340.0
margin_top = 293.0
margin_right = 395.0
margin_bottom = 326.0
text = "SEND"

[node name="Players" type="Control" parent="."]
margin_right = 250.0
margin_bottom = 542.0

[node name="ColorRect" type="ColorRect" parent="Players"]
margin_right = 239.0
margin_bottom = 599.0
color = Color( 0.215686, 0.203922, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Players"]
margin_left = 83.0
margin_top = 14.0
margin_right = 142.0
margin_bottom = 29.0
text = "PLAYERS:"

[node name="ScrollContainer" type="ScrollContainer" parent="Players"]
margin_left = 11.0
margin_top = 52.0
margin_right = 224.0
margin_bottom = 581.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="VSplitContainer" parent="Players/ScrollContainer"]

[node name="Logger" type="Control" parent="."]
visible = false
margin_left = 813.0
margin_top = 2.0
margin_right = 1023.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Logger"]
margin_left = -8.0
margin_top = -3.0
margin_right = 212.0
margin_bottom = 597.0
color = Color( 0.215686, 0.203922, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Logger"]
margin_left = 79.4324
margin_top = 14.0
margin_right = 138.432
margin_bottom = 29.0
text = "LOG:"

[node name="TextEdit" type="TextEdit" parent="Logger"]
margin_left = 4.0
margin_top = 43.0
margin_right = 201.0
margin_bottom = 586.0
readonly = true

[node name="CORRECTLabel" type="Label" parent="."]
visible = false
margin_left = 224.892
margin_top = 205.406
margin_right = 281.892
margin_bottom = 235.406
rect_scale = Vector2( 10.5107, 8.54872 )
custom_colors/font_color = Color( 0.537255, 1, 0.152941, 1 )
custom_colors/font_outline_modulate = Color( 0.172549, 1, 0.168627, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "CORRECT"

[node name="CorrectTimer" type="Timer" parent="."]

[node name="SetWordGuess" type="Control" parent="."]
visible = false
margin_left = 371.027
margin_top = 215.459
margin_right = 658.027
margin_bottom = 473.459

[node name="SubmitWordText" type="TextEdit" parent="SetWordGuess"]
margin_left = 5.94604
margin_top = 63.028
margin_right = 277.946
margin_bottom = 99.028
text = "ENTER WORD TO GUESS"

[node name="SubmitWordGuess" type="Button" parent="SetWordGuess"]
margin_left = 104.65
margin_top = 129.624
margin_right = 181.65
margin_bottom = 173.624
text = "SUBMIT"

[node name="NextDescriberButton" type="Button" parent="."]
visible = false
margin_left = 480.44
margin_top = 112.975
margin_right = 538.44
margin_bottom = 153.975
text = "NEXT"

[node name="RoundTimer" type="Timer" parent="."]

[node name="RemainingTimeLabel" type="Label" parent="."]
margin_left = 258.284
margin_top = 12.5992
margin_right = 301.284
margin_bottom = 37.5992
rect_scale = Vector2( 1.6, 1.64 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="RemainingTimeLabel"]
margin_left = 38.5851
margin_top = -1.99744
margin_right = 81.5851
margin_bottom = 23.0026
rect_scale = Vector2( 1.475, 1.42049 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
visible = false
margin_left = 265.881
margin_top = 45.4405
margin_right = 325.881
margin_bottom = 93.4405
text = "SUBMIT"

[connection signal="pressed" from="Describing/SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="timeout" from="CorrectTimer" to="." method="_on_CorrectTimer_timeout"]
[connection signal="pressed" from="SetWordGuess/SubmitWordGuess" to="." method="_on_SubmitWordGuess_pressed"]
[connection signal="pressed" from="NextDescriberButton" to="." method="_on_NextDescriberButton_pressed"]
[connection signal="timeout" from="RoundTimer" to="." method="_on_RoundTimer_timeout"]
[connection signal="pressed" from="ExitButton" to="." method="_on_Button_pressed"]
